--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,16 @@
 <resources>
     <string name="app_name">Money Converter App</string>
     <string name="pound_to_rupee">Pound to Rupee</string>
-    <string name="type_here_to_convert">Type here to convert...</string>
+    <string name="type_here_to_convert">Type here to convert…</string>
     <string name="currency_converter">Currency Converter</string>
     <string name="rupee_to_dollar">Rupee to Dollar</string>
     <string name="dollar_to_rupee">Dollar to Rupee</string>
     <string name="rupee_to_pound">Rupee to Pound</string>
     <string name="todo">TODO</string>
+    <string name="developers_contact">Developers Contact</string>
+    <string name="settings">Settings</string>
+    <string name="email">Email: adnankhannew777@gmail.com</string>
+    <string name="name">Name: Adnan Khan</string>
+    <string name="address">Address: Akola, Maharashtra</string>
+    <string name="request">*for any query or complaints, please let me know through email*</string>
 </resources>
